# star_stacking

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
star_align/: light.py  stack.py  utils.py
star_align/archived/: find_focal.py  opt_focal.py
star_align/matching/: blob_detect.py  match_stars.py  match_track.py  viz_track.py
