[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "star_align"
version = "0.1"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "loguru",
    "opencv-python",
    "star_finder @ git+https://github.com/Goulustis/star-tracker.git"
]

[tool.setuptools.packages.find]
include = ["star_align"]